- NEW: the issue tracker integration supports now relative urls. (Stefan)
- NEW: Option to bypass the recycle bin when reverting. (Stefan)
- CHG: When diffing a file with the previous revision, don't create a temp
       file for the file in the working copy. (Stefan)
- BUG: Crash when browsing through the settings dialog. (Stefan)
- BUG: URLs were not properly escaped in the revision graph for showing the
       log or merging. (Stefan)
- BUG: The root path was not set correctly when creating a patch. This lead
       to the patchfile containing only the filename and not the relative path
       if only one file was chosen/available to create the patch for. (Stefan)
- BUG: TortoiseMerge could crash when diffing empty files. (Stefan)
- BUG: Applying a patchfile for an UTF8 file (with BOM marker) with changes 
       in the first line did not work due to the UTF8 BOM marker. (Stefan)
- BUG: TortoiseMerge sometimes did not show the line diff bar. (Stefan)
- BUG: Crash when removing unmodified files from a changelist. (Stefan)
- BUG: 0-sized columns in status grid when fetching status. (Stefan Fuhrmann)

Version 1.5.0-RC1
- NEW: Files can be dragged to new changelists. (Stefan)
- NEW: The reintegrate page in the merge wizard shows the target
       working copy path. (Stefan)
- NEW: The copy command now can take an /url command line param to
       pre-fill the branch/tag dialog. (Stefan)
- NEW: Command line command "showcompare" which shows the diff
       between two urls/revs. (Stefan)
- NEW: The copy command now can take a /logmsg or /logmsgfile command
       line param to pre-fill the commit log message. (Stefan)
- NEW: Context menu in the log message box of the log dialog. (Stefan)
- NEW: Properies (svn:* etc.) can be shown in status dialog. (Stefan Fuhrmann)
- CHG: Fall back to cached log data if forced refresh fails in log view
       and the user chooses to go off-line again. (Stefan Fuhrmann)
- CHG: Finalize toolbar button icons. (Stefan Fuhrmann)